add rust build for java